# C_Template_Raspberry

./: CMakeLists.txt  DoxygenConfig.txt  README.md  Raspberry_C_Template.geany  main.c
inc/: MyTemplate_RPI_Header.h
src/: MyTemplate_RPI_Source.c
